WebCore/platform/graphics/gtk/FontPlatformData.h
@@ -47,6 +47,7 @@ public:
     FontPlatformData(WTF::HashTableDeletedValueType)
 #if defined(USE_FREETYPE)
         : m_pattern(hashTableDeletedFontValue())
+        , m_fallbacks(0)
 #elif defined(USE_PANGO)
         : m_context(0)
         , m_font(hashTableDeletedFontValue())
@@ -59,6 +60,7 @@ public:
     FontPlatformData()
 #if defined(USE_FREETYPE)
         : m_pattern(0)
+        , m_fallbacks(0)
 #elif defined(USE_PANGO)
         : m_context(0)
         , m_font(0)
@@ -84,6 +86,10 @@ public:
 
     unsigned hash() const
     {
+#if defined(USE_FREETYPE)
+        if (m_pattern)
+            return FcPatternHash(m_pattern);
+#endif
         uintptr_t hashCodes[1] = { reinterpret_cast<uintptr_t>(m_scaledFont) };
         return StringImpl::computeHash(reinterpret_cast<UChar*>(hashCodes), sizeof(hashCodes) / sizeof(UChar));
     }
@@ -99,6 +105,7 @@ public:
 
 #if defined(USE_FREETYPE)
     FcPattern* m_pattern;
+    FcFontSet* m_fallbacks;
 #elif defined(USE_PANGO)
     static PangoFontMap* m_fontMap;
     static GHashTable* m_hashTable;
